# cfa-uw-modeling

./: .gitignore  .lintr  .pre-commit-config.yaml  DESCRIPTION  Dockerfile  Makefile  NAMESPACE  NEWS.md  README.md  pyproject.toml
.github/workflows/: format-suggest.yaml  jarl-check.yaml  pkgdown.yaml  pre-commit.yaml  testing.yaml
R/: mgen_mod_amr.R  mgen_mod_progression.R  mgen_mod_testing.R  mgen_mod_transmission.R  mgen_mod_treatment.R  mgen_mod_utils.R
data/nsfg_scripts/: 01_clean_nsfg_2017_2019.R  02_convert_data_to_long.R  egodata_functions.R
epimodel-sti/: DESCRIPTION  NAMESPACE
epimodel-sti/R/: calc_network_targets.R  data.R  mgen_amr.R  mgen_initialize.R  mgen_progression.R  mgen_resim.R  mgen_startfuns.R  mgen_testing.R  mgen_trackers.R  mgen_transmit.R  mgen_tx.R  mod_aging.R  mod_utils.R  nw_prep.R  validate_simulated_rels.R
epimodel-sti/data-raw/: fit_networks.R
man/: amr_mgen.Rd  init_mgen.Rd  progression_mgen.Rd  resimnet_updates.Rd  testing_mgen.Rd  transmit_mgen.Rd  tx_mgen.Rd
network_development/: 0_descriptives.R  1_calc_network_targets.R  2_fit_networks.R  3_network_diagnostics.R  4_network_burnin.R  4_network_vital_dynamics_diag.R
networks/: 03_calculate_network_parameters.R  04_estimate_networks.R  calculate_network_parameters.R  estimate_networks.R  helper_functions.R  networks.md  networks.qmd
params/: casual_mixmat.rds  casual_mixmat_ag_predicted.rds  casual_mixmat_predicted.rds  main_mixmat.rds  main_mixmat_ag_predicted.rds  main_mixmat_predicted.rds  nw_params.yaml  nw_params_empirical.yaml  nw_params_predicted.yaml
(+42 files in other folders)
