[tool.poetry]
name = "cfa-uw-modeling"
version = "0.1.0"
description = ""
authors = ["Emily Pollock <ruu7@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
